# iwacu-backend

./: .dockerignore  .env.example  .env.production  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  MIGRATION_EXECUTION_SUMMARY.md  MIGRATION_VERIFICATION.sql  README.md  SEED_DATA_VERIFICATION.md  docker-compose.yml  jest.config.js  package.json  tsconfig.json
migrations/: 001_locations.sql  002_citizens.sql  003_sessions.sql  004_leaders.sql  005_announcements.sql  006_service_departments.sql  007_service_requests.sql  008_visitor_registrations.sql  009_seed.sql
prisma/: schema.prisma  seed.ts
src/: app.module.ts  db.rs  main.rs  main.ts
src/announcements/: announcements.controller.ts  announcements.module.ts  announcements.service.ts
src/announcements/dto/: announcement.dto.ts
src/auth/: auth.controller.spec.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
src/auth/dto/: auth-response.dto.ts  login.dto.ts  refresh.dto.ts
src/auth/guards/: jwt-auth.guard.spec.ts
src/auth/strategies/: jwt.strategy.ts  (+1 more)
src/citizens/: citizens.controller.spec.ts  citizens.controller.ts  citizens.service.spec.ts  citizens.service.ts
src/leaders/: leaders.controller.ts  leaders.module.ts  leaders.service.ts
src/locations/: locations.controller.ts  locations.service.spec.ts  locations.service.ts
src/models/: announcement.rs  citizen.rs  leader.rs  location.rs  mod.rs  service.rs  session.rs  visitor.rs
src/services/: services.controller.ts  services.service.ts
src/visitors/: visitors.controller.ts  visitors.module.ts  visitors.service.ts
(+19 files in other folders)
